# reticula-python

./: .buildinfo  .gitignore  AGENTS.md  CMakeLists.txt  CNAME  LICENSE  README.md  asv.conf.json  bibliography.html  citing.html  genindex.html  index.html  installation.html  io.html  objects.inv  pyproject.toml  quickstart.html  randomness.html  robots.txt  search.html  searchindex.js  setup.py  sitemap.xml  types.html
.github/workflows/: build_wheels.yml  documentation.yml  tests.yml
_sources/: citing.rst.txt  index.rst.txt  installation.rst.txt  io.rst.txt  randomness.rst.txt  types.rst.txt
_sources/algorithms/: assortativity.rst.txt  edge_degrees.rst.txt  event_graphs.rst.txt  graph_operations.rst.txt  graph_properties.rst.txt  graphicallity.rst.txt  index.rst.txt  static_network_reachability.rst.txt  temporal_network_reachability.rst.txt  vertex_degrees.rst.txt
_sources/dynamics/: index.rst.txt
_sources/examples/: index.rst.txt  isotropic.rst.txt
_sources/generation/: activation.rst.txt  barabasi.rst.txt  complete_graph.rst.txt  cycle.rst.txt  degree_seq.rst.txt  expected_degree_seq.rst.txt  fully_mixed.rst.txt  gnp.rst.txt  index.rst.txt  path.rst.txt  regular.rst.txt  regular_ring_lattice.rst.txt  square_grid_graph.rst.txt  uniform_hypergraph.rst.txt
_sources/operations/: cartesian_product.rst.txt  graph_union.rst.txt  index.rst.txt  occupation.rst.txt
_sources/shuffling/: event.rst.txt  index.rst.txt  link.rst.txt  static.rst.txt  timeline.rst.txt
algorithms/: assortativity.html  edge_degrees.html  event_graphs.html  graph_operations.html  graph_properties.html  graphicallity.html  index.html  static_network_reachability.html  temporal_network_reachability.html  vertex_degrees.html
benchmarks/: ba_sequence.json  module.py  static.py  temporal.py
dag/: __init__.py
dag/temporal_adjacency/: __init__.py
docs/: .index.rst.swp  citing.rst  conf.py  index.rst  installation.rst  io.rst  latex_index.rst  latex_preamble.rst  preamble.rst  quickstart.rst  randomness.rst  references.bib  requirements.txt  robots.txt  types.rst
docs/_static/css/: custom.css
docs/algorithms/: assortativity.rst  edge_degrees.rst  graph_operations.rst  graph_properties.rst  graphicallity.rst  index.rst  static_network_reachability.rst  temporal_network_reachability.rst  vertex_degrees.rst
docs/examples/: index.rst  isotropic-thread-figure.py  isotropic-thread.py  isotropic.py  isotropic.rst  network_manipulation.rst  static_hypergraph_basics.rst  static_network_basics.rst  temporal_network.rst  temporal_network_basics.rst
docs/generation/: activation.rst  barabasi.rst  complete_graph.rst  cycle.rst  degree_seq.rst  expected_degree_seq.rst  fully_mixed.rst  gnp.rst  index.rst  link_activation.rst  node_activation.rst  path.rst  regular.rst  regular_ring_lattice.rst  square_grid_graph.rst  uniform_hypergraph.rst
docs/operations/: add_remove.rst  graph_union.rst  index.rst  occupation.rst  subgraphs.rst
docs/shuffling/: event.rst  index.rst  link.rst  static.rst  timeline.rst
dynamics/: index.html
examples/: index.html  isotropic.html
examples/random_network_percolation/: README.md  random_network_percolation.py
examples/static_network_percolation/: README.md  static_network_percolation.py
generation/: activation.html  barabasi.html  complete_directed_graph.html  complete_graph.html  cycle.html  degree_seq.html  expected_degree_seq.html  fully_mixed.html  gnp.html  index.html  path.html  regular.html  regular_ring_lattice.html  square_grid_graph.html  uniform_hypergraph.html
operations/: add_remove.html  cartesian_product.html  graph_union.html  index.html  occupation.html  subgraphs.html
scripts/: build-wheels.sh
shuffling/: event.html  index.html  link.html  static.html  timeline.html
src/: algorithms.cpp  bind_core.hpp  common_edge_properties.hpp  component_containers.cpp  components.cpp  distributions.cpp  generators.cpp  implicit_event_graph_components.cpp  implicit_event_graphs.cpp  interval_sets.cpp  io.cpp  main.cpp  metaclass.hpp  microcanonical_reference_models.cpp  networks.cpp  operations.cpp  random_activation_networks.cpp  random_networks.cpp  random_state.cpp  scalar_types.cpp  scalar_wrapper.hpp  simple_generators.cpp  static_edges.cpp  static_hyperedges.cpp  static_microcanonical_reference_models.cpp  static_networks.cpp  temporal_adjacency.cpp  temporal_cluster_containers.cpp  temporal_clusters.cpp  temporal_edges.cpp  temporal_hyperedges.cpp  temporal_microcanonical_reference_models.cpp  temporal_networks.cpp  type_handles.hpp  type_interface.cpp  type_lists.cpp  type_str.hpp  type_utils.hpp  types.cpp
src/algorithms/: add_operations.cpp  assortativity.cpp  basic_operations.cpp  basic_temporal.cpp  common.cpp  degree.cpp  density.cpp  directed.cpp  directed_connectivity.cpp  edge_degree.cpp  edge_occupation.cpp  occupation.cpp  remove_operations.cpp  subgraph.cpp  temporal.cpp  temporal_adjacency.cpp  undirected.cpp  undirected_connectivity.cpp  vertex_occupation.cpp
src/dag/: __init__.py
src/dag/microcanonical_reference_models/: __init__.py
src/dag/temporal_adjacency/: __init__.py
src/operations/: add_operations.cpp  edge_occupation.cpp  remove_operations.cpp  subgraph.cpp  vertex_occupation.cpp
src/reticula/: __init__.py  generic_attribute.py  microcanonical_reference_models.py  temporal_adjacency.py
src/reticula/microcanonical_reference_models/: __init__.py
src/reticula/temporal_adjacency/: __init__.py
src/type_str/: common.hpp  components.hpp  distributions.hpp  edges.hpp  implicit_event_graphs.hpp  intervals.hpp  networks.hpp  random_state.hpp  scalars.hpp  temporal_adjacency.hpp  temporal_clusters.hpp
tests/: conftest.py  network_strategies.py  test_algorithms.py  test_clustering_operations.py  test_distributions.py  test_edge_operations.py  test_event_graphs.py  test_generation_operations.py  test_graph_operations.py  test_interval_sets.py  test_io_operations.py  test_metaclass.py  test_occupation_operations.py  test_temporal_networks.py  test_utility_functions.py
